inverting order and catalogue + fix some event payloads